Resolve audiences for tbres

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
                 "-g",
                 "--debugger:native",
                 "-o:${workspaceRoot}/bin/${fileBasenameNoExtension}",
-                "src/AzureBelt.nim"
+                "${relativeFile}"
             ],
             "options": {
                 "cwd": "${workspaceRoot}"
