--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "nim.lintOnSave": true,
     "nim.provider": "lsp",
-    "nim.buildCommand": "c -d=mingw --app=lib --nomain --cpu=amd64 /workspaces/AzureBelt/src/AzureBelt.nim #"
+    "nim.buildCommand": "c -d=mingw --app=lib --nomain --cpu=amd64 /workspaces/AzureBelt/src/AzureBelt.nim #",
 }
