--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -20,11 +20,13 @@ jobs:
             cp azbelt*.dll extension.json dist/
             cd dist
             tar -czvf ..\azbelt.tar.gz .
+            cd ..
 
-      - name: Github Release
-        uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: |
             azbelt*.dll
