--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -1,5 +1,6 @@
 name: 'build' 
 on: # rebuild any PRs and main branch changes
+  workflow_dispatch:
   pull_request:
   push:
     tags: ["v[0-9]+.[0-9]+.[0-9]+"]
