--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -28,6 +28,6 @@ jobs:
           token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: |
-            *.dll
-            *.exe
-            ../azbelt.tar.gz
+            build/*.dll
+            build/*.exe
+            azbelt.tar.gz
