--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,39 +1,10 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "Ubuntu",
+	"name": "AzbeltDev",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "nimlang/nim:1.6.10-ubuntu-regular",
-	"features": {
-		"ghcr.io/devcontainers/features/common-utils:2": {
-			"configureZshAsDefaultShell": "true"
-		},
-		"ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
-			"packages": "build-essential,mingw-w64,binutils,git,curl"
-		},
-		"ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
-			"plugins": "git zsh-autosuggestions zsh-syntax-highlighting",
-			"omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions https://github.com/zsh-users/zsh-syntax-highlighting"
-		},
-		"ghcr.io/devcontainers-contrib/features/bash-command:1": {
-			"command": "export PATH=$PATH:$HOME/.nimble/bin & echo $PATH >> ~/.profile"
-		}
-	},
-	"remoteEnv": {
-		"CHOOSENIM_NO_ANALYTICS": "1"
-	},
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "nimble -y install winim puppy",
-	// Configure tool-specific properties.
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"ms-vscode.cpptools",
-				"nimsaem.nimvscode",
-				"vadimcn.vscode-lldb"
-			]
-		}
-	},
+	"image": "ghcr.io/daddycocoaman/dc-nim:latest",
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	"postStartCommand": "git config --global --add safe.directory /workspaces/AzureBelt",
 	"remoteUser": "vscode"
 }
