--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -1,5 +1,5 @@
-name: 'build' 
-on: # rebuild any PRs and main branch changes
+name: 'Build and Release' 
+on:
   workflow_dispatch:
   pull_request:
   push:
